// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getMarkedTree Should find first child node 1`] = `
Object {
  "map": Object {
    "0": Object {
      "attributes": Array [
        Object {
          "name": "id",
          "value": "foo",
        },
      ],
      "children": Array [
        Object {
          "attributes": Array [
            Object {
              "name": "class",
              "value": "bar",
            },
          ],
          "children": Array [],
          "id": 1,
          "isFound": true,
          "isOpen": false,
          "name": "div",
          "parentId": 0,
          "role": "open",
          "source": Object {
            "endIndex": 60,
            "startIndex": 44,
          },
          "type": "tag",
        },
        Object {
          "attributes": Array [],
          "children": Array [
            Object {
              "attributes": Array [
                Object {
                  "name": "class",
                  "value": "bar",
                },
              ],
              "children": Array [],
              "id": 4,
              "isFound": false,
              "isOpen": false,
              "name": "div",
              "parentId": 3,
              "role": "open",
              "source": Object {
                "endIndex": 126,
                "startIndex": 110,
              },
              "type": "tag",
            },
          ],
          "id": 3,
          "isFound": false,
          "isOpen": false,
          "name": "div",
          "parentId": 0,
          "role": "open",
          "source": Object {
            "endIndex": 88,
            "startIndex": 84,
          },
          "type": "tag",
        },
      ],
      "id": 0,
      "isFound": false,
      "isOpen": true,
      "name": "div",
      "parentId": null,
      "role": "open",
      "source": Object {
        "endIndex": 26,
        "startIndex": 13,
      },
      "type": "tag",
    },
    "1": Object {
      "attributes": Array [
        Object {
          "name": "class",
          "value": "bar",
        },
      ],
      "children": Array [],
      "id": 1,
      "isFound": true,
      "isOpen": false,
      "name": "div",
      "parentId": 0,
      "role": "open",
      "source": Object {
        "endIndex": 60,
        "startIndex": 44,
      },
      "type": "tag",
    },
    "3": Object {
      "attributes": Array [],
      "children": Array [
        Object {
          "attributes": Array [
            Object {
              "name": "class",
              "value": "bar",
            },
          ],
          "children": Array [],
          "id": 4,
          "isFound": false,
          "isOpen": false,
          "name": "div",
          "parentId": 3,
          "role": "open",
          "source": Object {
            "endIndex": 126,
            "startIndex": 110,
          },
          "type": "tag",
        },
      ],
      "id": 3,
      "isFound": false,
      "isOpen": false,
      "name": "div",
      "parentId": 0,
      "role": "open",
      "source": Object {
        "endIndex": 88,
        "startIndex": 84,
      },
      "type": "tag",
    },
    "4": Object {
      "attributes": Array [
        Object {
          "name": "class",
          "value": "bar",
        },
      ],
      "children": Array [],
      "id": 4,
      "isFound": false,
      "isOpen": false,
      "name": "div",
      "parentId": 3,
      "role": "open",
      "source": Object {
        "endIndex": 126,
        "startIndex": 110,
      },
      "type": "tag",
    },
  },
  "tree": Object {
    "attributes": Array [
      Object {
        "name": "id",
        "value": "foo",
      },
    ],
    "children": Array [
      Object {
        "attributes": Array [
          Object {
            "name": "class",
            "value": "bar",
          },
        ],
        "children": Array [],
        "id": 1,
        "isFound": true,
        "isOpen": false,
        "name": "div",
        "parentId": 0,
        "role": "open",
        "source": Object {
          "endIndex": 60,
          "startIndex": 44,
        },
        "type": "tag",
      },
      Object {
        "attributes": Array [],
        "children": Array [
          Object {
            "attributes": Array [
              Object {
                "name": "class",
                "value": "bar",
              },
            ],
            "children": Array [],
            "id": 4,
            "isFound": false,
            "isOpen": false,
            "name": "div",
            "parentId": 3,
            "role": "open",
            "source": Object {
              "endIndex": 126,
              "startIndex": 110,
            },
            "type": "tag",
          },
        ],
        "id": 3,
        "isFound": false,
        "isOpen": false,
        "name": "div",
        "parentId": 0,
        "role": "open",
        "source": Object {
          "endIndex": 88,
          "startIndex": 84,
        },
        "type": "tag",
      },
    ],
    "id": 0,
    "isFound": false,
    "isOpen": true,
    "name": "div",
    "parentId": null,
    "role": "open",
    "source": Object {
      "endIndex": 26,
      "startIndex": 13,
    },
    "type": "tag",
  },
}
`;

exports[`getMarkedTree Should find next node 1`] = `
Object {
  "map": Object {
    "0": Object {
      "attributes": Array [],
      "children": Array [
        Object {
          "attributes": Array [
            Object {
              "name": "id",
              "value": "foo",
            },
          ],
          "children": Array [],
          "id": 1,
          "isFound": false,
          "isOpen": false,
          "name": "div",
          "parentId": 0,
          "role": "open",
          "source": Object {
            "endIndex": 48,
            "startIndex": 35,
          },
          "type": "tag",
        },
        Object {
          "attributes": Array [
            Object {
              "name": "class",
              "value": "bar",
            },
          ],
          "children": Array [
            Object {
              "attributes": Array [],
              "children": Array [],
              "id": 4,
              "isFound": false,
              "isOpen": false,
              "name": "div",
              "parentId": 3,
              "role": "open",
              "source": Object {
                "endIndex": 114,
                "startIndex": 110,
              },
              "type": "tag",
            },
          ],
          "id": 3,
          "isFound": true,
          "isOpen": false,
          "name": "div",
          "parentId": 0,
          "role": "open",
          "source": Object {
            "endIndex": 88,
            "startIndex": 72,
          },
          "type": "tag",
        },
      ],
      "id": 0,
      "isFound": false,
      "isOpen": true,
      "name": "div",
      "parentId": null,
      "role": "open",
      "source": Object {
        "endIndex": 17,
        "startIndex": 13,
      },
      "type": "tag",
    },
    "1": Object {
      "attributes": Array [
        Object {
          "name": "id",
          "value": "foo",
        },
      ],
      "children": Array [],
      "id": 1,
      "isFound": false,
      "isOpen": false,
      "name": "div",
      "parentId": 0,
      "role": "open",
      "source": Object {
        "endIndex": 48,
        "startIndex": 35,
      },
      "type": "tag",
    },
    "3": Object {
      "attributes": Array [
        Object {
          "name": "class",
          "value": "bar",
        },
      ],
      "children": Array [
        Object {
          "attributes": Array [],
          "children": Array [],
          "id": 4,
          "isFound": false,
          "isOpen": false,
          "name": "div",
          "parentId": 3,
          "role": "open",
          "source": Object {
            "endIndex": 114,
            "startIndex": 110,
          },
          "type": "tag",
        },
      ],
      "id": 3,
      "isFound": true,
      "isOpen": false,
      "name": "div",
      "parentId": 0,
      "role": "open",
      "source": Object {
        "endIndex": 88,
        "startIndex": 72,
      },
      "type": "tag",
    },
    "4": Object {
      "attributes": Array [],
      "children": Array [],
      "id": 4,
      "isFound": false,
      "isOpen": false,
      "name": "div",
      "parentId": 3,
      "role": "open",
      "source": Object {
        "endIndex": 114,
        "startIndex": 110,
      },
      "type": "tag",
    },
  },
  "tree": Object {
    "attributes": Array [],
    "children": Array [
      Object {
        "attributes": Array [
          Object {
            "name": "id",
            "value": "foo",
          },
        ],
        "children": Array [],
        "id": 1,
        "isFound": false,
        "isOpen": false,
        "name": "div",
        "parentId": 0,
        "role": "open",
        "source": Object {
          "endIndex": 48,
          "startIndex": 35,
        },
        "type": "tag",
      },
      Object {
        "attributes": Array [
          Object {
            "name": "class",
            "value": "bar",
          },
        ],
        "children": Array [
          Object {
            "attributes": Array [],
            "children": Array [],
            "id": 4,
            "isFound": false,
            "isOpen": false,
            "name": "div",
            "parentId": 3,
            "role": "open",
            "source": Object {
              "endIndex": 114,
              "startIndex": 110,
            },
            "type": "tag",
          },
        ],
        "id": 3,
        "isFound": true,
        "isOpen": false,
        "name": "div",
        "parentId": 0,
        "role": "open",
        "source": Object {
          "endIndex": 88,
          "startIndex": 72,
        },
        "type": "tag",
      },
    ],
    "id": 0,
    "isFound": false,
    "isOpen": true,
    "name": "div",
    "parentId": null,
    "role": "open",
    "source": Object {
      "endIndex": 17,
      "startIndex": 13,
    },
    "type": "tag",
  },
}
`;

exports[`getMarkedTree Should find next node, that matched by query 1`] = `
Object {
  "map": Object {
    "0": Object {
      "attributes": Array [],
      "children": Array [
        Object {
          "attributes": Array [
            Object {
              "name": "id",
              "value": "foo",
            },
          ],
          "children": Array [],
          "id": 1,
          "isFound": false,
          "isOpen": false,
          "name": "div",
          "parentId": 0,
          "role": "open",
          "source": Object {
            "endIndex": 48,
            "startIndex": 35,
          },
          "type": "tag",
        },
        Object {
          "attributes": Array [],
          "children": Array [],
          "id": 3,
          "isFound": false,
          "isOpen": false,
          "name": "div",
          "parentId": 0,
          "role": "open",
          "source": Object {
            "endIndex": 76,
            "startIndex": 72,
          },
          "type": "tag",
        },
        Object {
          "attributes": Array [
            Object {
              "name": "class",
              "value": "bar",
            },
          ],
          "children": Array [],
          "id": 5,
          "isFound": true,
          "isOpen": false,
          "name": "div",
          "parentId": 0,
          "role": "open",
          "source": Object {
            "endIndex": 116,
            "startIndex": 100,
          },
          "type": "tag",
        },
      ],
      "id": 0,
      "isFound": false,
      "isOpen": true,
      "name": "div",
      "parentId": null,
      "role": "open",
      "source": Object {
        "endIndex": 17,
        "startIndex": 13,
      },
      "type": "tag",
    },
    "1": Object {
      "attributes": Array [
        Object {
          "name": "id",
          "value": "foo",
        },
      ],
      "children": Array [],
      "id": 1,
      "isFound": false,
      "isOpen": false,
      "name": "div",
      "parentId": 0,
      "role": "open",
      "source": Object {
        "endIndex": 48,
        "startIndex": 35,
      },
      "type": "tag",
    },
    "3": Object {
      "attributes": Array [],
      "children": Array [],
      "id": 3,
      "isFound": false,
      "isOpen": false,
      "name": "div",
      "parentId": 0,
      "role": "open",
      "source": Object {
        "endIndex": 76,
        "startIndex": 72,
      },
      "type": "tag",
    },
    "5": Object {
      "attributes": Array [
        Object {
          "name": "class",
          "value": "bar",
        },
      ],
      "children": Array [],
      "id": 5,
      "isFound": true,
      "isOpen": false,
      "name": "div",
      "parentId": 0,
      "role": "open",
      "source": Object {
        "endIndex": 116,
        "startIndex": 100,
      },
      "type": "tag",
    },
  },
  "tree": Object {
    "attributes": Array [],
    "children": Array [
      Object {
        "attributes": Array [
          Object {
            "name": "id",
            "value": "foo",
          },
        ],
        "children": Array [],
        "id": 1,
        "isFound": false,
        "isOpen": false,
        "name": "div",
        "parentId": 0,
        "role": "open",
        "source": Object {
          "endIndex": 48,
          "startIndex": 35,
        },
        "type": "tag",
      },
      Object {
        "attributes": Array [],
        "children": Array [],
        "id": 3,
        "isFound": false,
        "isOpen": false,
        "name": "div",
        "parentId": 0,
        "role": "open",
        "source": Object {
          "endIndex": 76,
          "startIndex": 72,
        },
        "type": "tag",
      },
      Object {
        "attributes": Array [
          Object {
            "name": "class",
            "value": "bar",
          },
        ],
        "children": Array [],
        "id": 5,
        "isFound": true,
        "isOpen": false,
        "name": "div",
        "parentId": 0,
        "role": "open",
        "source": Object {
          "endIndex": 116,
          "startIndex": 100,
        },
        "type": "tag",
      },
    ],
    "id": 0,
    "isFound": false,
    "isOpen": true,
    "name": "div",
    "parentId": null,
    "role": "open",
    "source": Object {
      "endIndex": 17,
      "startIndex": 13,
    },
    "type": "tag",
  },
}
`;

exports[`getMarkedTree Should find only one element by id and class 1`] = `
Object {
  "map": Object {
    "0": Object {
      "attributes": Array [],
      "children": Array [
        Object {
          "attributes": Array [
            Object {
              "name": "id",
              "value": "foo",
            },
          ],
          "children": Array [],
          "id": 1,
          "isFound": false,
          "isOpen": false,
          "name": "div",
          "parentId": 0,
          "role": "open",
          "source": Object {
            "endIndex": 48,
            "startIndex": 35,
          },
          "type": "tag",
        },
        Object {
          "attributes": Array [
            Object {
              "name": "class",
              "value": "bar",
            },
          ],
          "children": Array [
            Object {
              "attributes": Array [
                Object {
                  "name": "id",
                  "value": "foo",
                },
              ],
              "children": Array [],
              "id": 4,
              "isFound": true,
              "isOpen": false,
              "name": "div",
              "parentId": 3,
              "role": "open",
              "source": Object {
                "endIndex": 123,
                "startIndex": 110,
              },
              "type": "tag",
            },
          ],
          "id": 3,
          "isFound": false,
          "isOpen": true,
          "name": "div",
          "parentId": 0,
          "role": "open",
          "source": Object {
            "endIndex": 88,
            "startIndex": 72,
          },
          "type": "tag",
        },
      ],
      "id": 0,
      "isFound": false,
      "isOpen": true,
      "name": "div",
      "parentId": null,
      "role": "open",
      "source": Object {
        "endIndex": 17,
        "startIndex": 13,
      },
      "type": "tag",
    },
    "1": Object {
      "attributes": Array [
        Object {
          "name": "id",
          "value": "foo",
        },
      ],
      "children": Array [],
      "id": 1,
      "isFound": false,
      "isOpen": false,
      "name": "div",
      "parentId": 0,
      "role": "open",
      "source": Object {
        "endIndex": 48,
        "startIndex": 35,
      },
      "type": "tag",
    },
    "3": Object {
      "attributes": Array [
        Object {
          "name": "class",
          "value": "bar",
        },
      ],
      "children": Array [
        Object {
          "attributes": Array [
            Object {
              "name": "id",
              "value": "foo",
            },
          ],
          "children": Array [],
          "id": 4,
          "isFound": true,
          "isOpen": false,
          "name": "div",
          "parentId": 3,
          "role": "open",
          "source": Object {
            "endIndex": 123,
            "startIndex": 110,
          },
          "type": "tag",
        },
      ],
      "id": 3,
      "isFound": false,
      "isOpen": true,
      "name": "div",
      "parentId": 0,
      "role": "open",
      "source": Object {
        "endIndex": 88,
        "startIndex": 72,
      },
      "type": "tag",
    },
    "4": Object {
      "attributes": Array [
        Object {
          "name": "id",
          "value": "foo",
        },
      ],
      "children": Array [],
      "id": 4,
      "isFound": true,
      "isOpen": false,
      "name": "div",
      "parentId": 3,
      "role": "open",
      "source": Object {
        "endIndex": 123,
        "startIndex": 110,
      },
      "type": "tag",
    },
  },
  "tree": Object {
    "attributes": Array [],
    "children": Array [
      Object {
        "attributes": Array [
          Object {
            "name": "id",
            "value": "foo",
          },
        ],
        "children": Array [],
        "id": 1,
        "isFound": false,
        "isOpen": false,
        "name": "div",
        "parentId": 0,
        "role": "open",
        "source": Object {
          "endIndex": 48,
          "startIndex": 35,
        },
        "type": "tag",
      },
      Object {
        "attributes": Array [
          Object {
            "name": "class",
            "value": "bar",
          },
        ],
        "children": Array [
          Object {
            "attributes": Array [
              Object {
                "name": "id",
                "value": "foo",
              },
            ],
            "children": Array [],
            "id": 4,
            "isFound": true,
            "isOpen": false,
            "name": "div",
            "parentId": 3,
            "role": "open",
            "source": Object {
              "endIndex": 123,
              "startIndex": 110,
            },
            "type": "tag",
          },
        ],
        "id": 3,
        "isFound": false,
        "isOpen": true,
        "name": "div",
        "parentId": 0,
        "role": "open",
        "source": Object {
          "endIndex": 88,
          "startIndex": 72,
        },
        "type": "tag",
      },
    ],
    "id": 0,
    "isFound": false,
    "isOpen": true,
    "name": "div",
    "parentId": null,
    "role": "open",
    "source": Object {
      "endIndex": 17,
      "startIndex": 13,
    },
    "type": "tag",
  },
}
`;

exports[`getMarkedTree Should search node with two classes 1`] = `
Object {
  "map": Object {
    "0": Object {
      "attributes": Array [
        Object {
          "name": "class",
          "value": "foo",
        },
      ],
      "children": Array [
        Object {
          "attributes": Array [
            Object {
              "name": "class",
              "value": "bar",
            },
          ],
          "children": Array [],
          "id": 1,
          "isFound": false,
          "isOpen": false,
          "name": "div",
          "parentId": 0,
          "role": "open",
          "source": Object {
            "endIndex": 63,
            "startIndex": 47,
          },
          "type": "tag",
        },
        Object {
          "attributes": Array [
            Object {
              "name": "class",
              "value": "foo bar",
            },
          ],
          "children": Array [],
          "id": 3,
          "isFound": true,
          "isOpen": false,
          "name": "div",
          "parentId": 0,
          "role": "open",
          "source": Object {
            "endIndex": 107,
            "startIndex": 87,
          },
          "type": "tag",
        },
      ],
      "id": 0,
      "isFound": false,
      "isOpen": true,
      "name": "div",
      "parentId": null,
      "role": "open",
      "source": Object {
        "endIndex": 29,
        "startIndex": 13,
      },
      "type": "tag",
    },
    "1": Object {
      "attributes": Array [
        Object {
          "name": "class",
          "value": "bar",
        },
      ],
      "children": Array [],
      "id": 1,
      "isFound": false,
      "isOpen": false,
      "name": "div",
      "parentId": 0,
      "role": "open",
      "source": Object {
        "endIndex": 63,
        "startIndex": 47,
      },
      "type": "tag",
    },
    "3": Object {
      "attributes": Array [
        Object {
          "name": "class",
          "value": "foo bar",
        },
      ],
      "children": Array [],
      "id": 3,
      "isFound": true,
      "isOpen": false,
      "name": "div",
      "parentId": 0,
      "role": "open",
      "source": Object {
        "endIndex": 107,
        "startIndex": 87,
      },
      "type": "tag",
    },
  },
  "tree": Object {
    "attributes": Array [
      Object {
        "name": "class",
        "value": "foo",
      },
    ],
    "children": Array [
      Object {
        "attributes": Array [
          Object {
            "name": "class",
            "value": "bar",
          },
        ],
        "children": Array [],
        "id": 1,
        "isFound": false,
        "isOpen": false,
        "name": "div",
        "parentId": 0,
        "role": "open",
        "source": Object {
          "endIndex": 63,
          "startIndex": 47,
        },
        "type": "tag",
      },
      Object {
        "attributes": Array [
          Object {
            "name": "class",
            "value": "foo bar",
          },
        ],
        "children": Array [],
        "id": 3,
        "isFound": true,
        "isOpen": false,
        "name": "div",
        "parentId": 0,
        "role": "open",
        "source": Object {
          "endIndex": 107,
          "startIndex": 87,
        },
        "type": "tag",
      },
    ],
    "id": 0,
    "isFound": false,
    "isOpen": true,
    "name": "div",
    "parentId": null,
    "role": "open",
    "source": Object {
      "endIndex": 29,
      "startIndex": 13,
    },
    "type": "tag",
  },
}
`;
